Corrected popup glitches
Ensure that the faded background covers the entire screen (contact and states pop)

--- a/scss/_contact-us.scss
+++ b/scss/_contact-us.scss
@@ -5,9 +5,8 @@
 	left: 50%;
 	transform: translate(-50%, -50%);
 	width: 100%;
-	height: 100vh;
+	height: 102vh;
 	background-color: rgba(223, 227, 223, 0.42);
-	z-index: 100;
 	visibility: hidden;
 	position: fixed;
 
@@ -17,24 +16,40 @@
 	}
 
 	.contact-info {
+		z-index: 1003;
 		max-width: 320px;
 		height: auto;
+		width: auto;
 		background-color: white;
 		z-index: 100;
 		align-content: center;
 		margin: 100px auto;
-		font-family: $heading-font;
-		font-size: 1em;
 		border-radius: 5px;
-		padding: 5px;
+		padding: 20px;
+		overflow: scroll;
 
 		h1 {
-			font-size: 2em;
+			font-size: 178%;
+			text-align: center;
+			padding-bottom: 5%;
+			font-family: $heading-font;
 		}
-		padding: 20px;
+
+		p {
+			font-family: $body-font;
+
+			span {
+				color: rgb(209, 161, 4);
+
+			}
+
+		}
+
 		ul {
 			list-style: none;
 			li {
+				margin: 2.5%;
+				font-family: $body-font;
 				text-decoration: none;
 				color: black;
 			}
