--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -64,7 +64,7 @@
 
 .header .menu-icon {
 	cursor: pointer;
-	display: inline-block;
+	// display: inline-block;
 	float: right;
 	padding: 28px 20px;
 	position: relative;
