--- a/scss/_state-layout.scss
+++ b/scss/_state-layout.scss
@@ -1,7 +1,7 @@
-main {
-    // background-color: rgba(209, 161, 4, 0.692);
+// main {
+//     // background-color: rgba(209, 161, 4, 0.692);
 
-}
+// }
 .state-wrapper {
     // margin: 0 10% 0 10%;
     max-width: 1500px;
@@ -122,7 +122,7 @@ main {
                         color: black;
 
                         &:active{
-                            color:  #226d81;;
+                            color:  #226d81;
                         }
                     }
     
